--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,12 @@
         "activityBar.inactiveForeground": "#2D3E9B",
         "activityBarBadge.foreground": "#38003A",
         "activityBarBadge.background": "#F36EF7",
-        "statusBar.foreground": "#FDEEFF",
-        "statusBar.background": "#90329F",
-        "statusBarItem.hoverBackground": "#6F295D",
-        "statusBarItem.remoteForeground": "#FFDAE9",
-        "statusBarItem.remoteBackground": "#A73261",
-        "statusBar.debuggingForeground": "#2A0031",
-        "statusBar.debuggingBackground": "#C669D6"
+        "statusBar.foreground": "#B8ECFF",
+        "statusBar.background": "#1D708F",
+        "statusBarItem.hoverBackground": "#2B4773",
+        "statusBarItem.remoteForeground": "#EEEEFF",
+        "statusBarItem.remoteBackground": "#4E4FB5",
+        "statusBar.debuggingForeground": "#00090D",
+        "statusBar.debuggingBackground": "#53A7C5"
     }
 }
