--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,12 @@
         "activityBar.inactiveForeground": "#2D3E9B",
         "activityBarBadge.foreground": "#38003A",
         "activityBarBadge.background": "#F36EF7",
-        "statusBar.foreground": "#D0E8FF",
-        "statusBar.background": "#2A66A0",
-        "statusBarItem.hoverBackground": "#364079",
-        "statusBarItem.remoteForeground": "#F5F1FF",
-        "statusBarItem.remoteBackground": "#6145B6",
-        "statusBar.debuggingForeground": "#000E1C",
-        "statusBar.debuggingBackground": "#609DD6"
+        "statusBar.foreground": "#FDEEFF",
+        "statusBar.background": "#90329F",
+        "statusBarItem.hoverBackground": "#6F295D",
+        "statusBarItem.remoteForeground": "#FFDAE9",
+        "statusBarItem.remoteBackground": "#A73261",
+        "statusBar.debuggingForeground": "#2A0031",
+        "statusBar.debuggingBackground": "#C669D6"
     }
 }
